# captain

./: Cargo.toml  shell.nix
ahoy/: README.md  build-root.sh  run.sh
cog/: Cargo.toml  README.md
cog/src/: main.rs
coreutils/: Cargo.toml  README.md
quarterdeck/: Cargo.toml  README.md
quarterdeck/src/: main.rs
test-services/tcpecho/: Cargo.toml
test-services/tcpecho/src/: main.rs
